--- a/app.yaml
+++ b/app.yaml
@@ -1,6 +1,17 @@
-runtime: php55
+application: flis-bot
+version: 1
+runtime: python27
 api_version: 1
+threadsafe: yes
 
 handlers:
-- url: /.*
-  script: Mafia Mod.php
+- url: /favicon\.ico
+  static_files: favicon.ico
+  upload: favicon\.ico
+  
+- url: .*
+  script: main.app
+
+libraries:
+- name: webapp2
+  version: "2.5.2"
